# ITMO-CPP-int128

./: CMakeLists.txt  README.md
.github/workflows/: tests.yml
libraries/: CMakeLists.txt
libraries/int128/: CMakeLists.txt
libraries/int128/include/expression/: Expression.hpp
libraries/int128/include/int128/: Int128.hpp
libraries/int128/src/: Expression.cpp  Int128.cpp
libraries/int128/tests/: test_expression.cpp  test_int128.cpp
src/: main.cpp
tools/: add_binary.py  binary_to_decimal.py  binary_to_double.py  checker.py  decimal_to_binary.py  division_to_binary.py  multiply_binary.py
